@@ -5,6 +5,9 @@ The format is based on Keep a Changelog (https://keepachangelog.com/en/1.0.0/),
 and this project adheres to Semantic Versioning (https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+### Fixed
+- Fixed database schema mismatch for prompts table (missing post_id column)
+- Added foreign key constraint for prompts table
 
 ## [0.0.14] - 2025-07-31
 ### Fixed
